--- a/templates/legal/privacy_policy.html.twig
+++ b/templates/legal/privacy_policy.html.twig
@@ -13,23 +13,27 @@
 {% endblock %}
 
 {% block main_body %}
-    <h1>{{ "page.privacy_policy.presentation.title"|trans }}</h1>
+    {{ "page.privacy_policy.presentation.title"|trans }}
 
-    <p>{{ "page.privacy_policy.presentation.description1"|trans }}</p>
-    <p>{{ "page.privacy_policy.presentation.description2"|trans }}</p>
-    <p>{{ "page.privacy_policy.presentation.description3"|trans }}</p>
+    <p>
+        {{ "page.privacy_policy.presentation.description1"|trans }}<br>
+        {{ "page.privacy_policy.presentation.description2"|trans }}<br>
+        {{ "page.privacy_policy.presentation.description3"|trans }}<br>
+    </p>
 
-    <h2><strong>{{ "page.privacy_policy.consent.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.privacy_policy.consent.title"|trans }}</h2>
 
     <p>{{ "page.privacy_policy.consent.description"|trans }}</p>
 
-    <h2><strong>{{ "page.privacy_policy.information_we_collect.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.privacy_policy.information_we_collect.title"|trans }}</h2>
 
-    <p>{{ "page.privacy_policy.information_we_collect.description1"|trans }}</p>
-    <p>{{ "page.privacy_policy.information_we_collect.description2"|trans }}</p>
-    <p>{{ "page.privacy_policy.information_we_collect.description3"|trans }}</p>
+    <p>
+        {{ "page.privacy_policy.information_we_collect.description1"|trans }}<br>
+        {{ "page.privacy_policy.information_we_collect.description2"|trans }}<br>
+        {{ "page.privacy_policy.information_we_collect.description3"|trans }}<br>
+    </p>
 
-    <h2><strong>{{ "page.privacy_policy.how_we_use_your_information.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.privacy_policy.how_we_use_your_information.title"|trans }}</h2>
 
     <p>{{ "page.privacy_policy.how_we_use_your_information.tab"|trans }}</p>
 
@@ -43,46 +47,56 @@
         <li>{{ "page.privacy_policy.how_we_use_your_information.subtab7"|trans }}</li>
     </ul>
 
-    <h2><strong>{{ "page.privacy_policy.log_files.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.privacy_policy.log_files.title"|trans }}</h2>
 
     <p>{{ "page.privacy_policy.log_files.description"|trans }}</p>
 
-    <h2><strong>{{ "page.privacy_policy.cookies_and_web_beacons.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.privacy_policy.cookies_and_web_beacons.title"|trans }}</h2>
 
     <p>{{ "page.privacy_policy.cookies_and_web_beacons.description"|trans }}</p>
 
-    <h2><strong>{{ "page.privacy_policy.advertising_partners_privacy_policies.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.privacy_policy.advertising_partners_privacy_policies.title"|trans }}</h2>
 
-    <P>{{ "page.privacy_policy.advertising_partners_privacy_policies.description1"|trans }}</p>
-    <p>{{ "page.privacy_policy.advertising_partners_privacy_policies.description2"|trans }}</p>
-    <p>{{ "page.privacy_policy.advertising_partners_privacy_policies.description3"|trans }}</p>
+    <P>
+        {{ "page.privacy_policy.advertising_partners_privacy_policies.description1"|trans }}<br>
+        {{ "page.privacy_policy.advertising_partners_privacy_policies.description2"|trans }}<br>
+        {{ "page.privacy_policy.advertising_partners_privacy_policies.description3"|trans }}<br>
+    </p>
 
-    <h2><strong>{{ "page.privacy_policy.third_party_privacy_policies.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.privacy_policy.third_party_privacy_policies.title"|trans }}</h2>
 
-    <p>{{ "page.privacy_policy.third_party_privacy_policies.description1"|trans }}</p>
-    <p>{{ "page.privacy_policy.third_party_privacy_policies.description2"|trans }}</p>
+    <p>
+        {{ "page.privacy_policy.third_party_privacy_policies.description1"|trans }}<br>
+        {{ "page.privacy_policy.third_party_privacy_policies.description2"|trans }}<br>
+    </p>
 
-    <h2><strong>{{ "page.privacy_policy.ccpa_privacy_rights.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.privacy_policy.ccpa_privacy_rights.title"|trans }}</h2>
 
-    <p>{{ "page.privacy_policy.ccpa_privacy_rights.description1"|trans }}</p>
-    <p>{{ "page.privacy_policy.ccpa_privacy_rights.description2"|trans }}</p>
-    <p>{{ "page.privacy_policy.ccpa_privacy_rights.description3"|trans }}</p>
-    <p>{{ "page.privacy_policy.ccpa_privacy_rights.description4"|trans }}</p>
-    <p>{{ "page.privacy_policy.ccpa_privacy_rights.description5"|trans }}</p>
+    <p>
+        {{ "page.privacy_policy.ccpa_privacy_rights.description1"|trans }}<br>
+        {{ "page.privacy_policy.ccpa_privacy_rights.description2"|trans }}<br>
+        {{ "page.privacy_policy.ccpa_privacy_rights.description3"|trans }}<br>
+        {{ "page.privacy_policy.ccpa_privacy_rights.description4"|trans }}<br>
+        {{ "page.privacy_policy.ccpa_privacy_rights.description5"|trans }}<br>
+    </p>
 
-    <h2><strong>{{ "page.privacy_policy.gdpr_data_protection_rights.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.privacy_policy.gdpr_data_protection_rights.title"|trans }}</h2>
 
-    <p>{{ "page.privacy_policy.gdpr_data_protection_rights.description1"|trans }}</p>
-    <p>{{ "page.privacy_policy.gdpr_data_protection_rights.description2"|trans }}</p>
-    <p>{{ "page.privacy_policy.gdpr_data_protection_rights.description3"|trans }}</p>
-    <p>{{ "page.privacy_policy.gdpr_data_protection_rights.description4"|trans }}</p>
-    <p>{{ "page.privacy_policy.gdpr_data_protection_rights.description5"|trans }}</p>
-    <p>{{ "page.privacy_policy.gdpr_data_protection_rights.description6"|trans }}</p>
-    <p>{{ "page.privacy_policy.gdpr_data_protection_rights.description7"|trans }}</p>
-    <p>{{ "page.privacy_policy.gdpr_data_protection_rights.description8"|trans }}</p>
+    <p>
+        {{ "page.privacy_policy.gdpr_data_protection_rights.description1"|trans }}<br>
+        {{ "page.privacy_policy.gdpr_data_protection_rights.description2"|trans }}<br>
+        {{ "page.privacy_policy.gdpr_data_protection_rights.description3"|trans }}<br>
+        {{ "page.privacy_policy.gdpr_data_protection_rights.description4"|trans }}<br>
+        {{ "page.privacy_policy.gdpr_data_protection_rights.description5"|trans }}<br>
+        {{ "page.privacy_policy.gdpr_data_protection_rights.description6"|trans }}<br>
+        {{ "page.privacy_policy.gdpr_data_protection_rights.description7"|trans }}<br>
+        {{ "page.privacy_policy.gdpr_data_protection_rights.description8"|trans }}<br>
+    </p>
 
-    <h2><strong>{{ "page.privacy_policy.children_information.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.privacy_policy.children_information.title"|trans }}</h2>
 
-    <p>{{ "page.privacy_policy.children_information.description1"|trans }}</p>
-    <p>{{ "page.privacy_policy.children_information.description2"|trans }}</p>
+    <p>
+        {{ "page.privacy_policy.children_information.description1"|trans }}<br>
+        {{ "page.privacy_policy.children_information.description2"|trans }}<br>
+    </p>
 {% endblock %}
