--- a/templates/legal/terms_of_use.html.twig
+++ b/templates/legal/terms_of_use.html.twig
@@ -15,66 +15,69 @@
 {% block main_body %}
     <p>{{ "page.terms_of_use.version1.title"|trans }}</p>
 
-    <p>{{ "page.terms_of_use.version1.description1"|trans }}</p>
-    <p>{{ "page.terms_of_use.version1.description2"|trans }}</p>
-    <p>{{ "page.terms_of_use.version1.description3"|trans }}</p>
-    <p>{{ "page.terms_of_use.version1.description4"|trans }}</p>
+    <p>
+        {{ "page.terms_of_use.version1.description1"|trans }}<br>
+        {{ "page.terms_of_use.version1.description2"|trans }}<br>
+        {{ "page.terms_of_use.version1.description3"|trans }}<br>
+        {{ "page.terms_of_use.version1.description4"|trans }}<br>
+    </p>
 
-    <h2><strong>{{ "page.terms_of_use.access_to_the_site.title"|trans }}</strong></h2>
+    <h2 class="font-bold">{{ "page.terms_of_use.access_to_the_site.title"|trans }}</h2>
 
-    <p><strong>{{ "page.terms_of_use.subject_to_these_terms.title"|trans }}</strong> {{ "page.terms_of_use.subject_to_these_terms.description"|trans }}</p>
+    <p><span class="font-bold">{{ "page.terms_of_use.subject_to_these_terms.title"|trans }}</span> {{ "page.terms_of_use.subject_to_these_terms.description"|trans }}</p>
 
-    <p><strong>{{ "page.terms_of_use.certain_restrictions.title"|trans }}</strong> {{ "page.terms_of_use.certain_restrictions.description1"|trans }}</p>
+    <p>
+        <span class="font-bold">{{ "page.terms_of_use.certain_restrictions.title"|trans }}</span> {{ "page.terms_of_use.certain_restrictions.description1"|trans }}<br>
+        {{ "page.terms_of_use.certain_restrictions.description2"|trans }}
+    </p>
 
-    <p>{{ "page.terms_of_use.certain_restrictions.description2"|trans }}</p>
+    <p>
+        <span class="font-bold">{{ "page.terms_of_use.no_support_or_maintenance.title"|trans }}</span> {{ "page.terms_of_use.no_support_or_maintenance.description1"|trans }}<br>
+        {{ "page.terms_of_use.no_support_or_maintenance.description2"|trans }}
+    </p>
 
-    <p><strong>{{ "page.terms_of_use.no_support_or_maintenance.title"|trans }}</strong> {{ "page.terms_of_use.no_support_or_maintenance.description1"|trans }}</p>
+    <h2 class="font-bold">{{ "page.terms_of_use.user_content.title"|trans }}</h2>
 
-    <p>{{ "page.terms_of_use.no_support_or_maintenance.description2"|trans }}</p>
+    <p>
+        {{ "page.terms_of_use.user_content.description1"|trans }}<br>
+        {{ "page.terms_of_use.user_content.description2"|trans }}<br>
+    </p>
 
-    <h2>{{ "page.terms_of_use.user_content.title"|trans }}</h2>
+    <p>
+        <span class="font-bold">{{ "page.terms_of_use.acceptable_use_policy.title"|trans }}</span> {{ "page.terms_of_use.acceptable_use_policy.description1"|trans }}<br>
+        {{ "page.terms_of_use.acceptable_use_policy.description2"|trans }}<br>
+        {{ "page.terms_of_use.acceptable_use_policy.description3"|trans }}<br>
+        {{ "page.terms_of_use.acceptable_use_policy.description4"|trans }}<br>
+        {{ "page.terms_of_use.acceptable_use_policy.description5"|trans }}<br>
+    </p>
 
-    <p>{{ "page.terms_of_use.user_content.description1"|trans }}</p>
-
-    <p>{{ "page.terms_of_use.user_content.description2"|trans }}</p>
-
-    <p><strong>{{ "page.terms_of_use.acceptable_use_policy.title"|trans }}</strong> {{ "page.terms_of_use.acceptable_use_policy.description1"|trans }}</p>
-
-    <p>{{ "page.terms_of_use.acceptable_use_policy.description2"|trans }}</p>
-
-    <p>{{ "page.terms_of_use.acceptable_use_policy.description3"|trans }}</p>
-
-    <p>{{ "page.terms_of_use.acceptable_use_policy.description4"|trans }}</p>
-
-    <p>{{ "page.terms_of_use.acceptable_use_policy.description5"|trans }}</p>
-
-    <h2>{{ "page.terms_of_use.third_party.title"|trans }}</h2>
+    <h2 class="font-bold">{{ "page.terms_of_use.third_party.title"|trans }}</h2>
 
     <p>{{ "page.terms_of_use.third_party.description"|trans }}</p>
 
-    <p><strong>{{ "page.terms_of_use.other_users.title"|trans }}</strong> {{ "page.terms_of_use.other_users.description1"|trans }}</p>
+    <p><span class="font-bold">{{ "page.terms_of_use.other_users.title"|trans }}</span> {{ "page.terms_of_use.other_users.description1"|trans }}<br>
+        {{ "page.terms_of_use.other_users.description2"|trans }}</p>
 
-    <p>{{ "page.terms_of_use.other_users.description2"|trans }}</p>
+    <p><span class="font-bold">{{ "page.terms_of_use.cookies_and_web_beacons.title"|trans }}</span> {{ "page.terms_of_use.cookies_and_web_beacons.description"|trans }}</p>
 
-    <p><strong>{{ "page.terms_of_use.cookies_and_web_beacons.title"|trans }}</strong> {{ "page.terms_of_use.cookies_and_web_beacons.description"|trans }}</p>
+    <h2 class="font-bold">{{ "page.terms_of_use.disclaimers.title"|trans }}</h2>
 
-    <h2>{{ "page.terms_of_use.disclaimers.title"|trans }}</h2>
+    <p>
+        {{ "page.terms_of_use.disclaimers.description1"|trans }}<br>
+        {{ "page.terms_of_use.disclaimers.description2"|trans }}<br>
+    </p>
 
-    <p>{{ "page.terms_of_use.disclaimers.description1"|trans }}</p>
+    <h2 class="font-bold">{{ "page.terms_of_use.limitation_on_liability.title"|trans }}</h2>
 
-    <p>{{ "page.terms_of_use.disclaimers.description2"|trans }}</p>
+    <p>
+        {{ "page.terms_of_use.limitation_on_liability.description1"|trans }}<br>
+        {{ "page.terms_of_use.limitation_on_liability.description2"|trans }}<br>
+        {{ "page.terms_of_use.limitation_on_liability.description3"|trans }}<br>
+    </p>
 
-    <h2>{{ "page.terms_of_use.limitation_on_liability.title"|trans }}</h2>
+    <p><span class="font-bold">{{ "page.terms_of_use.term_and_termination.title"|trans }}</span>{{ "page.terms_of_use.term_and_termination.description"|trans }}</p>
 
-    <p>{{ "page.terms_of_use.limitation_on_liability.description1"|trans }}</p>
-
-    <p>{{ "page.terms_of_use.limitation_on_liability.description2"|trans }}</p>
-
-    <p>{{ "page.terms_of_use.limitation_on_liability.description3"|trans }}</p>
-
-    <p><strong>{{ "page.terms_of_use.term_and_termination.title"|trans }}</strong>{{ "page.terms_of_use.term_and_termination.description"|trans }}</p>
-
-    <h2>{{ "page.terms_of_use.copyright_policy.title"|trans }}</h2>
+    <h2 class="font-bold">{{ "page.terms_of_use.copyright_policy.title"|trans }}</h2>
 
     <p>{{ "page.terms_of_use.copyright_policy.description1"|trans }}</p>
 
@@ -90,47 +93,36 @@
 
     <p>{{ "page.terms_of_use.copyright_policy.description2"|trans }}</p>
 
-    <h2>{{ "page.terms_of_use.general.title"|trans }}</h2>
+    <h2 class="font-bold">{{ "page.terms_of_use.general.title"|trans }}</h2>
 
     <p>{{ "page.terms_of_use.general.description"|trans }}</p>
 
-    <p><strong>{{ "page.terms_of_use.applicability.title"|trans }}</strong>{{ "page.terms_of_use.applicability.description"|trans }} </p>
+    <p>
+        <span class="font-bold">{{ "page.terms_of_use.applicability.title"|trans }}</span>{{ "page.terms_of_use.applicability.description"|trans }}<br><br>
+        <span class="font-bold">{{ "page.terms_of_use.notice_requirement.title"|trans }}</span>{{ "page.terms_of_use.notice_requirement.description"|trans }} <br><br>
+        <span class="font-bold">{{ "page.terms_of_use.arbitration_rules.title"|trans }}</span>{{ "page.terms_of_use.arbitration_rules.description"|trans }}<br><br>
+        <span class="font-bold">{{ "page.terms_of_use.additional_rules.title"|trans }}</span>{{ "page.terms_of_use.additional_rules.description"|trans }} <br><br>
+        <span class="font-bold">{{ "page.terms_of_use.time_limits.title"|trans }}</span>{{ "page.terms_of_use.time_limits.description"|trans }} <br><br>
+        <span class="font-bold">{{ "page.terms_of_use.authority_of_arbitrator.title"|trans }}</span>{{ "page.terms_of_use.authority_of_arbitrator.description"|trans }} <br><br>
+        <span class="font-bold">{{ "page.terms_of_use.waiver.title"|trans }}</span>{{ "page.terms_of_use.waiver.description"|trans }} <br><br>
+        <span class="font-bold">{{ "page.terms_of_use.confidentiality.title"|trans }}</span>{{ "page.terms_of_use.confidentiality.description"|trans }}<br><br>
+        <span class="font-bold">{{ "page.terms_of_use.severability.title"|trans }}</span>{{ "page.terms_of_use.severability.description"|trans }} <br><br>
+        <span class="font-bold">{{ "page.terms_of_use.right_to_waive.title"|trans }}</span>{{ "page.terms_of_use.right_to_waive.description"|trans }} <br><br>
+        <span class="font-bold">{{ "page.terms_of_use.survival.title"|trans }}</span>{{ "page.terms_of_use.survival.description"|trans }} <br><br>
+        <span class="font-bold">{{ "page.terms_of_use.small_claims.title"|trans }}</span>{{ "page.terms_of_use.small_claims.description"|trans }} <br><br>
+        <span class="font-bold">{{ "page.terms_of_use.emergency.title"|trans }}</span>{{ "page.terms_of_use.emergency.description"|trans }} <br><br>
+        <span class="font-bold">{{ "page.terms_of_use.claims.title"|trans }}</span>{{ "page.terms_of_use.claims.description1"|trans }} <br><br>
+    </p>
 
-    <p><strong>{{ "page.terms_of_use.notice_requirement.title"|trans }}</strong>{{ "page.terms_of_use.notice_requirement.description"|trans }} </p>
+    <p>
+        {{ "page.terms_of_use.claims.description2"|trans }}<br>
+        {{ "page.terms_of_use.claims.description3"|trans }}<br>
+        {{ "page.terms_of_use.claims.description4"|trans }}<br>
+    </p>
 
-    <p><strong>{{ "page.terms_of_use.arbitration_rules.title"|trans }}</strong>{{ "page.terms_of_use.arbitration_rules.description"|trans }}</p>
-
-    <p><strong>{{ "page.terms_of_use.additional_rules.title"|trans }}</strong>{{ "page.terms_of_use.additional_rules.description"|trans }} </p>
-
-    <p><strong>{{ "page.terms_of_use.time_limits.title"|trans }}</strong>{{ "page.terms_of_use.time_limits.description"|trans }} </p>
-
-    <p><strong>{{ "page.terms_of_use.authority_of_arbitrator.title"|trans }}</strong>{{ "page.terms_of_use.authority_of_arbitrator.description"|trans }} </p>
-
-    <p><strong>{{ "page.terms_of_use.waiver.title"|trans }}</strong>{{ "page.terms_of_use.waiver.description"|trans }} </p>
-
-    <p><strong>{{ "page.terms_of_use.confidentiality.title"|trans }}</strong>{{ "page.terms_of_use.confidentiality.description"|trans }} </p>
-
-    <p><strong>{{ "page.terms_of_use.severability.title"|trans }}</strong>{{ "page.terms_of_use.severability.description"|trans }} </p>
-
-    <p><strong>{{ "page.terms_of_use.right_to_waive.title"|trans }}</strong>{{ "page.terms_of_use.right_to_waive.description"|trans }} </p>
-
-    <p><strong>{{ "page.terms_of_use.survival.title"|trans }}</strong>{{ "page.terms_of_use.survival.description"|trans }} </p>
-
-    <p><strong>{{ "page.terms_of_use.small_claims.title"|trans }}</strong>{{ "page.terms_of_use.small_claims.description"|trans }} </p>
-
-    <p><strong>{{ "page.terms_of_use.emergency.title"|trans }}</strong>{{ "page.terms_of_use.emergency.description"|trans }} </p>
-
-    <p><strong>{{ "page.terms_of_use.claims.title"|trans }}</strong>{{ "page.terms_of_use.claims.description1"|trans }} </p>
-
-    <p>{{ "page.terms_of_use.claims.description2"|trans }}</p>
-
-    <p>{{ "page.terms_of_use.claims.description3"|trans }}</p>
-
-    <p>{{ "page.terms_of_use.claims.description4"|trans }}</p>
-
-    <p><strong>{{ "page.terms_of_use.electronic_communication.title"|trans }}</strong> {{ "page.terms_of_use.electronic_communication.description"|trans }}</p>
-
-    <p><strong>{{ "page.terms_of_use.entire_terms.title"|trans }}</strong> {{ "page.terms_of_use.entire_terms.description"|trans }}</p>
-
-    <p><strong>{{ "page.terms_of_use.copyright.title"|trans }}</strong> {{ "page.terms_of_use.copyright.description"|trans }}</p>
+    <p>
+        <span class="font-bold">{{ "page.terms_of_use.electronic_communication.title"|trans }}</span> {{ "page.terms_of_use.electronic_communication.description"|trans }}<br><br>
+        <span class="font-bold">{{ "page.terms_of_use.entire_terms.title"|trans }}</span> {{ "page.terms_of_use.entire_terms.description"|trans }}<br><br>
+        <span class="font-bold">{{ "page.terms_of_use.copyright.title"|trans }}</span> {{ "page.terms_of_use.copyright.description"|trans }}<br><br>
+    </p>
 {% endblock %}
