--- a/templates/tech/create.html.twig
+++ b/templates/tech/create.html.twig
@@ -1,20 +1,38 @@
 {% extends "layout.html.twig" %}
 
 {% block title %}
-
+    {{ "Step 2 - Attributes"|trans }}
 {% endblock %}
 
 {% block description %}
 
 {% endblock %}
 
-{% block main_title %}
+{% block steps %}
+    {{ component("steps", { step: 2, steps: 3 }) }}
+{% endblock %}
 
+{% block main_title %}
+    {{ "Step 2 - Attributes"|trans }}
 {% endblock %}
 
 {% block main_body %}
-    {{ form_start(form) }}
-    {{ form_row(form) }}
-    {{ component("button", { content: "page.stack.create.submit"|trans, submit: true }) }}
-    {{ form_end(form) }}
+    <div class="mx-auto">
+        {{ form_start(form) }}
+
+        <div class="grid auto-rows-min gap-8 md:grid-cols-2 lg:grid-cols-3">
+            {{ form_row(form.name) }}
+            {{ form_row(form.description) }}
+            {{ form_row(form.categories) }}
+            {{ form_row(form.dependsOn) }}
+            {{ form_row(form.picture) }}
+            {{ form_row(form.links) }}
+        </div>
+        <div class="flex justify-center gap-4">
+            {{ component("button", { centered: false, content: "common.back"|trans, href: path("app_tech_choose_type") }) }}
+            {{ component("button", { centered: false, content: "page.stack.create.submit"|trans, submit: true }) }}
+        </div>
+
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
