--- a/templates/tech/review_and_publish.html.twig
+++ b/templates/tech/review_and_publish.html.twig
@@ -1,20 +1,47 @@
 {% extends "layout.html.twig" %}
 
 {% block title %}
-
+    {{ "Step 3 - Preview"|trans }}
 {% endblock %}
 
 {% block description %}
 
 {% endblock %}
 
-{% block main_title %}
+{% block steps %}
+    {{ component("steps", { step: 3, steps: 3 }) }}
+{% endblock %}
 
+{% block main_title %}
+    {{ "Step 3 - Preview"|trans }}
 {% endblock %}
 
 {% block main_body %}
-    <form method="post" action="{{ path("app_tech_review_and_publish") }}">
-        <input name="_token" type="hidden" value="{{ csrf_token("publish-#{tech.slug}") }}" />
-        {{ component("button", { content: "page.stack.review.publish"|trans, submit: true }) }}
-    </form>
+    <div class="flex items-center justify-center gap-8 text-4xl">
+        {{ component("image", { alt: tech.name, class: "rounded", filter: "short_list", height: 64, src: vich_uploader_asset(tech.picture, "file"), width: 64 }) }}
+        <h2>
+            {{ tech.name }}
+        </h2>
+    </div>
+    <div class="text-center text-xl">
+        <span class="font-bold">{{ "common.type" }}</span>: {{ tech.type.name }}
+    </div>
+    <div class="text-center text-xl">
+        <span class="font-bold">{{ "common.categories" }}</span>:{% for category in tech.categories %}
+            {{ "#{category.name} " }}
+        {% endfor %}
+    </div>
+    <div class="card bg-base-100">
+        <p class="card-body text-xl">
+            {{ tech.description }}
+        </p>
+    </div>
+    <div class="flex justify-center gap-4">
+        {{ component("button", { centered: false, content: "common.back"|trans, href: path("app_tech_create", { typeParam: tech.type.value }) }) }}
+
+        <form method="post" action="{{ path("app_tech_review_and_publish") }}">
+            <input name="_token" type="hidden" value="{{ csrf_token("publish-#{tech.slug}") }}" />
+            {{ component("button", { content: "page.stack.review.publish"|trans, submit: true }) }}
+        </form>
+    </div>
 {% endblock %}
