--- a/templates/admin/tech/_form.html.twig
+++ b/templates/admin/tech/_form.html.twig
@@ -5,11 +5,13 @@
     <div class="grow basis-0">
         {{ form_row(form.name) }}
         {{ form_row(form.description) }}
-        {{ form_row(form.picture) }}
-    </div>
-     <div class="grow basis-0">
         {{ form_row(form.type) }}
         {{ form_row(form.categories) }}
+        {{ form_row(form.dependsOn) }}
+        {{ form_row(form.request) }}
+        {{ form_row(form.picture) }}
+    </div>
+    <div class="grow basis-0">
         {{ form_row(form.links) }}
     </div>
 </div>
