--- a/templates/admin/stack/_edit_content.html.twig
+++ b/templates/admin/stack/_edit_content.html.twig
@@ -1,10 +1,10 @@
 {% trans_default_domain "admin" %}
 
-{% include "admin/stack/_form.html.twig" with { form, button_label: "common.edit"|trans } only %}
+{% include "admin/stack/_form.html.twig" with { form, button_label: ("common." ~ (isEditing ? 'edit' : 'new'))|trans } only %}
 
 <div class="flex w-full items-center justify-center gap-6">
     {{ component("button", { content: "common.back_to_list"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("admin_stack") }) }}
-    {% if is_granted(constant("App\\Security\\Voter\\UserVoter::DELETE"), app.user) %}
+    {% if is_granted(constant("App\\Security\\Voter\\UserVoter::DELETE"), app.user) and isEditing %}
         {% include "admin/stack/_delete_form.html.twig" with { stack } only %}
     {% endif %}
 </div>
