Add t parameter to search

--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -75,6 +75,8 @@
                     {{ knp_menu_render(menuItem, { currentAsLink: false, template: knp_custom_menu }) }}
                 </nav>
             </div>
+
+            <input type="hidden" name="t" value="{{ type }}" />
         </turbo-frame>
     </form>
 {% endblock %}
