--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,7 @@
             <input id="mobile-drawer" type="checkbox" class="drawer-toggle" aria-label="{{ "common.menu"|trans }}" />
             <div class="drawer-content flex flex-col">
                 {% block flashes %}
-                    <div id="app-flashes" class="fixed bottom-3 left-2 right-2 z-10 mr-auto flex max-w-lg flex-col gap-2 transition-all">
+                    <div id="app-flashes" class="fixed bottom-3 left-2 right-2 z-[1000] mr-auto flex max-w-lg flex-col gap-2 transition-all">
                         {% for type, messages in app.flashes %}
                             {% for message in messages %}
                                 {{ component("alert", { message, type }) }}
