--- a/templates/stack/show.html.twig
+++ b/templates/stack/show.html.twig
@@ -1,7 +1,7 @@
 {% extends "layout.html.twig" %}
 
 {% block title %}
-
+    {{ stack.name }}
 {% endblock %}
 
 {% block description %}
@@ -9,9 +9,13 @@
 {% endblock %}
 
 {% block main_title %}
-
+    {{ stack.name }}
 {% endblock %}
 
 {% block main_body %}
-
+    <div class="grid gap-4 sm:grid-cols-2 md:gap-8 lg:grid-cols-3 xl:grid-cols-4">
+        {% for name, techs in stack.getCategoriesWithTechs %}
+            {{ component('categoryCard', { name, techs }) }}
+        {% endfor %}
+    </div>
 {% endblock %}
