--- a/templates/tech/show.html.twig
+++ b/templates/tech/show.html.twig
@@ -1,17 +1,55 @@
 {% extends "layout.html.twig" %}
 
 {% block title %}
-
+    {{ tech.name }}
 {% endblock %}
 
 {% block description %}
 
 {% endblock %}
 
-{% block main_title %}
-
-{% endblock %}
-
 {% block main_body %}
-
+    <div class="flex items-center justify-center gap-8 text-4xl">
+        {{ component("image", { alt: tech.name, filter: "tech_picture_side", src: vich_uploader_asset(tech.picture, "file"), height: 64, width: 64 }) }}
+        <h2>
+            {{ tech.name }}
+        </h2>
+        {% include "icon/star.html.twig" %}
+    </div>
+    <div class="text-center text-xl">
+        <span class="font-bold">{{ "tech.type"|trans }}</span> : <span>{{ tech.type.name }}</span>
+    </div>
+    <div class="text-center text-xl">
+        <span class="font-bold">{{ "tech.categories"|trans }}</span> : <span>{{ tech.categories|map(c => c.name)|join(", ", " " ~ ("common.and"|trans) ~ " ") }}</span>
+    </div>
+    {% if tech.dependsOn %}
+        <div class="text-center text-xl">
+            <span class="font-bold">{{ "tech.depends_on"|trans }}</span> : <span>{{ component("button", { centered: false, content: tech.dependsOn.name, href: path("app_tech_show", { slug: tech.dependsOn.slug }) }) }}</span>
+        </div>
+    {% endif %}
+    {% if tech.description %}
+        <div class="card bg-base-100">
+            <p class="card-body text-xl">
+                {{ tech.description }}
+            </p>
+        </div>
+    {% endif %}
+    <div class="flex items-center justify-center gap-4">
+        {% for icon, link in tech.activeLinks %}
+            {{
+                component(
+                    "button",
+                    {
+                        icon: icon,
+                        href: link,
+                        target: "_blank",
+                        externalLink: true,
+                        circle: true,
+                        centered: false,
+                        ariaLabel: ("tech.link.#{icon}")|trans
+                    }
+                )
+            }}
+        {% endfor %}
+    </div>
 {% endblock %}
