--- a/templates/admin/category/_edit_content.html.twig
+++ b/templates/admin/category/_edit_content.html.twig
@@ -4,7 +4,7 @@
 
 <div class="flex w-full items-center justify-center gap-6">
     {{ component("button", { content: "common.back_to_list"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("admin_category") }) }}
-    {% if is_granted(constant("App\\Security\\Voter\\UserVoter::DELETE"), app.user) and isEditing %}
+    {% if isEditing %}
         {% include "admin/category/_delete_form.html.twig" with { category } only %}
     {% endif %}
 </div>
