--- a/templates/components/image.html.twig
+++ b/templates/components/image.html.twig
@@ -2,7 +2,7 @@
 
 <img
     class="{{ class }}"
-    src="{{ data_uri_thumbnail(local_asset(path), 25, 25) }}"
+    src="{{ data_uri_thumbnail_cached(local_asset(path), 25, 25) }}"
     {{ stimulus_controller('symfony/ux-lazy-image/lazy-image', {
         src: filter ? path|imagine_filter(filter) : path,
         srcset: dimensionSrcset is empty ? '{}' : dimensionSrcset|json_encode()
